--- a/Home Assistant/scripts.yaml
+++ b/Home Assistant/scripts.yaml
@@ -1,80 +1,45 @@
+# This script sets all parameters by sending a json formatted file to the broker
 mqtt_set_heizungsparameter:
   alias: Heizungsparameter setzen
   icon: mdi:send
   sequence:
   - service: mqtt.publish
     data:
-      topic: heizung/parameters/fusspunkt
-      payload_template: '{{ states(''input_number.heizung_fusspunkt'') | int  }}'
-  - service: mqtt.publish
-    data:
-      topic: heizung/parameters/endpunkt
-      payload_template: '{{ states(''input_number.heizung_endpunkt'') | int  }}'
-  - service: mqtt.publish
-    data:
-      topic: heizung/parameters/minimum
-      payload_template: '{{ states(''input_number.heizung_minimum'') | int  }}'
-  - service: mqtt.publish
-    data:
-      topic: heizung/parameters/boostduration
-      payload_template: '{{ states(''input_number.heizung_boostdauer'') | int  }}'
-  - service: mqtt.publish
-    data:
-      topic: heizung/control/operation
-      payload_template: '{% set betrieb = states(''input_boolean.heizung_betrieb'')
-        %} {% if betrieb == ''on'' %} 1 {% else %} 0 {% endif %}'
-  - service: mqtt.publish
-    data:
-      topic: heizung/parameters/ambient
-      payload_template: '{{ states(''sensor.wandthermostat_kueche_temperature'') |
-        float  }}'
-  - service: mqtt.publish
-    data:
-      topic: heizung/parameters/targetambient
-      payload_template: '{{ states(''input_number.heizung_zieltemperatur'') | float  }}'
-  - service: mqtt.publish
-    data:
-      topic: heizung/parameters/adaption
-      payload_template: '{{ states(''input_number.heizung_adaption'') | int  }}'
-  - service: mqtt.publish
-    data:
-      payload_template: '{% set dynadapt = states(''input_boolean.heizung_dynamicadaption'')
-        %} {% if dynadapt == ''on'' %} 1 {% else %} 0 {% endif %}'
-      topic: heizung/parameters/dynadapt
-  - service: mqtt.publish
-    data:
-      payload_template: '{% set scaling = states(''input_boolean.heizung_ventilskalierung'')
-        %} {% if scaling == ''on'' %} 1 {% else %} 0 {% endif %}'
-      topic: heizung/parameters/valvescaling
-  - service: mqtt.publish
-    data:
-      payload_template: '{{ states(''input_number.heizung_ventilskalierung_max'')
-        | int  }}'
-      topic: heizung/parameters/valvemax
-  - service: mqtt.publish
-    data:
-      payload_template: '{{ states(''sensor.ventiloffnung_minmax'') | int  }}'
-      topic: heizung/parameters/valvecurrent
-  mode: single
-mqtt_set_heizungboost:
-  alias: Boost
-  icon: mdi:fire
+      topic: cerasmarter/heating/parameters
+      payload_template: '{ 
+        "Enabled": {{ iif(is_state(''input_boolean.heizung_betrieb'', ''on''), 1, 0) }},
+        "FeedSetpoint": {{ states(''input_number.heizung_sollvorlauf_manuell'') | int(default=0) }},
+        "FeedBaseSetpoint": {{ states(''input_number.heizung_fusspunkt'') | int(default=0)  }},
+        "FeedCutOff": {{ states(''input_number.heizung_endpunkt'') | int(default=0)  }},
+        "FeedMinimum": {{ states(''input_number.heizung_minimum'') | int(default=0)  }},
+        "AuxilaryTemperature": {{ states(''sensor.temperatur_und_luftfeuchte_aussen_actual_temperature'') | float(default=0)  }},
+        "AmbientTemperature": {{ state_attr(''climate.thermostat_og_kochen_und_essen'',''current_temperature'') | float(default=0) }},
+        "TargetAmbientTemperature": {{ states(''input_number.heizung_zieltemperatur'') | float(default=0)  }},
+        "OnDemandBoostDuration": {{ states(''input_number.heizung_boostdauer'') | int(default=0)  }},
+        "Adaption": {{ states(''input_number.heizung_adaption'') | int(default=0)  }},
+        "ValveScaling": {{ iif(is_state(''input_boolean.heizung_ventilskalierung'', ''on''), 1, 0) }},
+        "ValveScalingMaxOpening": {{ states(''input_number.heizung_ventilskalierung_max'') | int(default=0)  }},
+        "ValveScalingOpening": {{ states(''sensor.average_weighted_valve'') | int(default=0)  }},
+        "DynamicAdaption": {{ iif(is_state(''input_boolean.heizung_dynamicadaption'', ''on''), 1, 0) }},
+        "OverrideSetpoint": {{ iif(is_state(''input_boolean.heizung_override'', ''on''), 1, 0) }} 
+        }'
+# This Script will trigger the boost function.
+boost_heizung:
+  alias: Boost Heizung
   sequence:
-  - service: homeassistant.toggle
-    entity_id: input_boolean.heizung_boost
   - service: mqtt.publish
     data:
-      topic: heizung/control/boost
-      payload_template: '{% set boost = states(''input_boolean.heizung_boost'') %}
-        {% if boost == ''on'' %} 1 {% else %} 0 {% endif %}'
+      topic: cerasmarter/boost/set
+      payload: '1'
   mode: single
-mqtt_set_heizungfast:
+  icon: mdi:fire-circle
+# This Script will trigger the fast heatup function.
+fastheatup_heizung:
   alias: Schnellaufheizung
-  icon: mdi:fast-forward
   sequence:
   - service: mqtt.publish
     data:
-      topic: heizung/control/fastheatup
-      payload_template: '{% set fast = states(''input_boolean.heizung_fastheatup'')
-        %} {% if fast == ''on'' %} 1 {% else %} 0 {% endif %}'
+      topic: cerasmarter/fastheatup/set
+      payload: '1'
   mode: single
+  icon: mdi:fire-circle
