--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,7 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
 description = "Project for controlling Junkers heating systems equipped with BM1 and BM2 bus modules"
 default_envs = development, production
@@ -25,13 +26,14 @@ lib_deps =
 	paulstoffregen/OneWire@^2.3.5
 	milesburton/DallasTemperature@^3.9.1
 	bblanchon/ArduinoJson@^6.19.4
-board_build.partitions = min_spiffs.csv
+	me-no-dev/AsyncTCP @ ^1.1.1
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
+board_build.partitions = partitions_custom.csv
 build_flags = 
 	-D MCP2515_INT=17
 	-D MCP2515_CS=5
 	-D MQTT_MAX_PACKET_SIZE=1024
 
-; User Defined Vars
 [custom]
 upload_protocol = espota
 upload_port = 10.0.1.54
@@ -47,6 +49,8 @@ upload_protocol = ${custom.upload_protocol}
 upload_port = ${custom.upload_port}
 monitor_port = socket://${custom.upload_port}:23
 build_flags = ${env:development.build_flags}
+
+	
 
 [env:development_usb]
 upload_port = /dev/ttyUSB0
