Filemanager & FS change
Filesystem changed to LittleFS because SPIFFS is no longer maintained. Filemanager is completed. Moving on to Settings.

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.4
 	me-no-dev/AsyncTCP @ ^1.1.1
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
+board_build.filesystem = littlefs
 board_build.partitions = partitions_custom.csv
 build_flags = 
 	-D MCP2515_INT=17
