Add Features, Fix Typos
Forget to commit changes separately...
Firmware Update, Status page, Wifi Config, MQTT Config including topics, Fixed a Typo (auxilary -> auxiliary) in all files. Stability improvements.

--- a/Home Assistant/mqtt.yaml
+++ b/Home Assistant/mqtt.yaml
@@ -73,43 +73,43 @@ mqtt:
       state_topic: "cerasmarter/heating/values"
       value_template: "{{ value_json.Season }}"
       force_update: true
-    ### Auxilary Sensors 'cerasmarter/auxilary/parameters'
+    ### Auxiliary Sensors 'cerasmarter/auxiliary/parameters'
     - name: "Externe Vorlauftemperatur"
-      unique_id: "HeatingInformation_AuxilaryTemperatures_Feed"
-      state_topic: "cerasmarter/auxilary/values"
+      unique_id: "HeatingInformation_AuxiliaryTemperatures_Feed"
+      state_topic: "cerasmarter/auxiliary/values"
       unit_of_measurement: "°C"
       value_template: "{{ value_json.Feed.Temperature }}"
     - name: "Externe Rücklauftemperatur"
-      unique_id: "HeatingInformation_AuxilaryTemperatures_Return"
-      state_topic: "cerasmarter/auxilary/values"
+      unique_id: "HeatingInformation_AuxiliaryTemperatures_Return"
+      state_topic: "cerasmarter/auxiliary/values"
       unit_of_measurement: "°C"
       value_template: "{{ value_json.Return.Temperature }}"
     - name: "Externe Abgastemperatur"
-      unique_id: "HeatingInformation_AuxilaryTemperatures_Exhaust"
-      state_topic: "cerasmarter/auxilary/values"
+      unique_id: "HeatingInformation_AuxiliaryTemperatures_Exhaust"
+      state_topic: "cerasmarter/auxiliary/values"
       unit_of_measurement: "°C"
       value_template: "{{ value_json.Exhaust.Temperature }}"
     - name: "Externe Umgebungstemperatur"
-      unique_id: "HeatingInformation_AuxilaryTemperatures_Ambient"
-      state_topic: "cerasmarter/auxilary/values"
+      unique_id: "HeatingInformation_AuxiliaryTemperatures_Ambient"
+      state_topic: "cerasmarter/auxiliary/values"
       unit_of_measurement: "°C"
       value_template: "{{ value_json.Ambient.Temperature }}"
-    ### Auxilary Sensors 'cerasmarter/auxilary/parameters'
+    ### Auxiliary Sensors 'cerasmarter/auxiliary/parameters'
     - name: "Externe Vorlauftemperatur Status"
-      unique_id: "HeatingInformation_AuxilaryTemperatures_FeedReachable"
-      state_topic: "cerasmarter/auxilary/values"
+      unique_id: "HeatingInformation_AuxiliaryTemperatures_FeedReachable"
+      state_topic: "cerasmarter/auxiliary/values"
       value_template: "{{ iif(value_json.Feed.Reachable == 'true', 'yes', 'no', 'unknown') }}"
     - name: "Externe Rücklauftemperatur Status"
-      unique_id: "HeatingInformation_AuxilaryTemperatures_ReturnReachable"
-      state_topic: "cerasmarter/auxilary/values"
+      unique_id: "HeatingInformation_AuxiliaryTemperatures_ReturnReachable"
+      state_topic: "cerasmarter/auxiliary/values"
       value_template: "{{ iif(value_json.Return.Reachable == 'true', 'yes', 'no', 'unknown') }}"
     - name: "Externe Abgastemperatur Status"
-      unique_id: "HeatingInformation_AuxilaryTemperatures_ExhaustReachable"
-      state_topic: "cerasmarter/auxilary/values"
+      unique_id: "HeatingInformation_AuxiliaryTemperatures_ExhaustReachable"
+      state_topic: "cerasmarter/auxiliary/values"
       value_template: "{{ iif(value_json.Exhaust.Reachable == 'true', 'yes', 'no', 'unknown') }}"
     - name: "Externe Umgebungstemperatur Status"
-      unique_id: "HeatingInformation_AuxilaryTemperatures_AmbientReachable"
-      state_topic: "cerasmarter/auxilary/values"
+      unique_id: "HeatingInformation_AuxiliaryTemperatures_AmbientReachable"
+      state_topic: "cerasmarter/auxiliary/values"
       value_template: "{{ iif(value_json.Ambient.Reachable == 'true', 'yes', 'no', 'unknown') }}"
     ### Status 'cerasmarter/status'
     - name: "Heizung Brenner"
