--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 .pio
-.vscode/extensions.json
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/ipch
+.idea
+.vscode
 *arduino_secrets.h
 */arduino_secrets.h
 *arduino_secrets.cpp
@@ -11,4 +8,6 @@
 *scratchpad.md
 */scratchpad.md
 data/configuration.json
-.vscode/extensions.json
+/cmake-*/
+CMakeLists.txt
+CMakeListsPrivate.txt
