--- a/.github/workflows/deploy-artifact.yml
+++ b/.github/workflows/deploy-artifact.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: deploy-artifact
 
 # Controls when the workflow will run
@@ -7,8 +5,12 @@ on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: [ "master" ]
+    tags:
+    - 'v*'
   pull_request:
     branches: [ "master" ]
+    tags:
+    - 'v*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
