--- a/platformio.ini
+++ b/platformio.ini
@@ -66,3 +66,9 @@ upload_port = ${custom.upload_port}
 monitor_port = socket://${custom.upload_port}:23
 build_flags = 
 	${env:production.build_flags}
+
+[env:github]
+build_flags = 
+	${env.build_flags}
+	-include version.h
+	-D ENV=${this.__env__}
