Add script to gzip data files selectively

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [platformio]
 description = "Project for controlling Junkers heating systems equipped with BM1 and BM2 bus modules"
 default_envs = development, production
+data_dir = data_build
 
 [env]
 platform = espressif32
@@ -34,10 +35,11 @@ build_flags =
 	-D MCP2515_INT=17
 	-D MCP2515_CS=5
 	-D MQTT_MAX_PACKET_SIZE=1024
+extra_scripts = post:gzip-data.py
 
 [custom]
 upload_protocol = espota
-upload_port = 10.0.1.54
+upload_port = 10.0.1.56
 
 [env:development]
 build_flags = 
