--- a/platformio.ini
+++ b/platformio.ini
@@ -32,7 +32,7 @@ lib_deps =
 board_build.filesystem = littlefs
 board_build.partitions = partitions_custom.csv
 build_flags = 
-	-D MCP2515_INT=17
+	-D MCP2515_INT=26
 	-D MCP2515_CS=5
 	-D MQTT_MAX_PACKET_SIZE=1024
 extra_scripts = post:gzip-data.py
@@ -61,6 +61,7 @@ build_flags = ${env:development.build_flags}
 build_flags = 
 	${env.build_flags}
 	-D ENV=${this.__env__}
+	-D MUTE_MQTT=0
 
 [env:production_ota]
 upload_protocol = ${custom.upload_protocol}
